--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
-<title>kyu9's blog</title>
+<title>kyu28's blog</title>
 
 <script src="https://cdn.jsdelivr.net/npm/showdown@2.0.3/dist/showdown.min.js"></script>
 <script>
@@ -163,7 +163,7 @@
 </head>
 <body onload="getList()">
 <header>
-  <a id="title" href="#top" onclick="loadContent('index.md')">Blog</a>
+  <a id="title" href="#top" onclick="loadContent('index.md')">kyu28's blog</a>
   <h2 id="subtitle">A simple blog</h2>
 </header>
 
@@ -176,8 +176,8 @@
 </article>
 
 <footer>
-  <a href="https://github.com/KilobY73/rand-guide" style="color: #fff">GitHub repo</a>
-  <p id="copyright" style="font-size: 1vh;">Copyright &copy; </p>
+  <a href="https://github.com/kyu28/blog" style="color: #fff">GitHub repo</a>
+  <p id="copyright" style="font-size: 1vh;">Copyright &copy; kyu28</p>
 </footer>
 </body>
 </html>
