--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
         }
       }
     }
-    xhr.open("GET", "/list.json", true);
+    xhr.open("GET", "list.json", true);
     xhr.send();
     loadContent("index.md");
   }
@@ -31,7 +31,7 @@
         document.getElementById("paragraph").innerHTML = converter.makeHtml(xhr.responseText);
       }
     }
-    xhr.open("GET", "/md/" + path, true);
+    xhr.open("GET", "md/" + path, true);
     xhr.send();
   }
 </script>
