Apply GitHub CSS

--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
 <title>kyu28's blog</title>
 
 <script src="https://cdn.jsdelivr.net/npm/showdown@2.0.3/dist/showdown.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown.min.css" integrity="sha512-Ya9H+OPj8NgcQk34nCrbehaA0atbzGdZCI2uCbqVRELgnlrh8vQ2INMnkadVMSniC54HChLIh5htabVuKJww8g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <script>
   var converter = new showdown.Converter();
 
@@ -172,7 +173,7 @@
 </nav>
 
 <article>
-  <p id="paragraph"></p>
+  <p id="paragraph" class="markdown-body"></p>
 </article>
 
 <footer>
