--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,7 @@
   }
 
   function goToTop() {
-    window.scrollBy({top: -window.scrollY, left: 0, behavior: "smooth"});
+    window.scrollTo({top: 0, left: 0, behavior: "smooth"});
   }
 </script>
 
